--- a/scraper-DotNet/Properties/launchSettings.json
+++ b/scraper-DotNet/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:39073/",
+      "applicationUrl": "http://localhost:39073/api/metaScraper",
       "sslPort": 0
     }
   },
@@ -23,7 +23,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:39072/"
+      "applicationUrl": "http://localhost:39072/api/metaScraper"
     }
   }
 }
