--- a/scraper-DotNet/scraper-DotNet.csproj
+++ b/scraper-DotNet/scraper-DotNet.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
     <PackageReference Include="HtmlAgilityPack" Version="1.9.1" />
   </ItemGroup>
 
@@ -20,5 +20,6 @@
 
   <ItemGroup>
     <Compile Remove="Controllers\InvalidArgumentException.cs" />
+    <Compile Remove="Models\ErrorModel.cs" />
   </ItemGroup>
 </Project>
